# ChangeLog for dev-ruby/ruby-vte3
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-vte3/ChangeLog,v 1.5 2014/08/17 10:20:26 blueness Exp $

  17 Aug 2014; Anthony G. Basile <blueness@gentoo.org> ruby-vte3-1.2.6.ebuild,
  ruby-vte3-2.0.2.ebuild, ruby-vte3-2.1.0.ebuild, ruby-vte3-2.2.0.ebuild:
  Keyword on ~ppc, request by mrueg

*ruby-vte3-2.2.0 (17 Mar 2014)

  17 Mar 2014; Naohiro Aota <naota@gentoo.org> +ruby-vte3-2.2.0.ebuild:
  version bump

*ruby-vte3-2.1.0 (16 Jan 2014)

  16 Jan 2014; Naohiro Aota <naota@gentoo.org> +ruby-vte3-2.1.0.ebuild:
  version bump

*ruby-vte3-2.0.2 (09 Dec 2013)

  09 Dec 2013; Naohiro Aota <naota@gentoo.org> +ruby-vte3-2.0.2.ebuild:
  version bump

*ruby-vte3-1.2.6 (04 May 2013)

  04 May 2013; Naohiro Aota <naota@gentoo.org> +metadata.xml,
  +ruby-vte3-1.2.6.ebuild:
  New package dev-ruby/ruby-vte3 required for new version of Ruby/Gnome2