@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-vte3
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-vte3/ChangeLog,v 1.5 2014/08/17 10:20:26 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-vte3/ChangeLog,v 1.6 2014/12/13 01:11:08 naota Exp $
+
+*ruby-vte3-2.2.3 (13 Dec 2014)
+
+  13 Dec 2014; Naohiro Aota <naota@gentoo.org> +ruby-vte3-2.2.3.ebuild:
+  version bump
 
   17 Aug 2014; Anthony G. Basile <blueness@gentoo.org> ruby-vte3-1.2.6.ebuild,
   ruby-vte3-2.0.2.ebuild, ruby-vte3-2.1.0.ebuild, ruby-vte3-2.2.0.ebuild:
